RESOLVED FIXED276882
WebRTCProvider::setActive is no longer useful
https://bugs.webkit.org/show_bug.cgi?id=276882
Summary WebRTCProvider::setActive is no longer useful
youenn fablet
Reported 2024-07-22 05:46:34 PDT
WebRTCProvider::setActive is no longer useful
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-22 05:47:06 PDT
EWS
Comment 2 2024-07-22 12:16:30 PDT
Committed 281202@main (bb644dcd08fd): <https://commits.webkit.org/281202@main> Reviewed commits have been landed. Closing PR #31059 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.