WebRTCProvider::setActive is no longer useful rdar://132235693 https://bugs.webkit.org/show_bug.cgi?id=276882

Reviewed by Eric Carlson.

WebRTCProvider::setActive was used to forward whether the page is visible or not to libwebrtc.
This was used notably on iOS in the past but is nowadays a no-op.
We can safely remove the code.
Since webrtc::setApplicationStatus was used to detect libwebrtc availability, we switch to the function that is used to create a peer connection factory.
This last part was manually tested.

* Source/ThirdParty/libwebrtc/Configurations/libwebrtc.exp:
* Source/ThirdParty/libwebrtc/Source/webrtc/sdk/WebKit/WebKitUtilities.h:
* Source/ThirdParty/libwebrtc/Source/webrtc/sdk/WebKit/WebKitUtilities.mm:
(webrtc::setApplicationStatus): Deleted.
* Source/WebCore/page/Page.cpp:
(WebCore::Page::applicationDidEnterBackground):
(WebCore::Page::applicationWillEnterForeground):
* Source/WebCore/platform/mediastream/WebRTCProvider.cpp:
(WebCore::WebRTCProvider::setActive): Deleted.
* Source/WebCore/platform/mediastream/WebRTCProvider.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerWebRTCProvider.cpp:
(WebCore::WebRTCProvider::setActive): Deleted.
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::WebRTCProvider::setActive): Deleted.
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProviderCocoa.cpp:
(WebCore::WebRTCProvider::webRTCAvailable):
(WebCore::LibWebRTCProviderCocoa::setActive): Deleted.
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProviderCocoa.h:

Canonical link: https://commits.webkit.org/281202@main