Source/WebCore/platform/mediastream/WebRTCProvider.cpp
@@ -48,10 +48,6 @@ bool WebRTCProvider::webRTCAvailable()
     return false;
 }
 
-void WebRTCProvider::setActive(bool)
-{
-}
-
 void WebRTCProvider::setH264HardwareEncoderAllowed(bool)
 {
 }
